<resources>
    <string name="app_name">Edvora</string>

    <!-- Bottom Navigation Bar -->
    <string name="page_1">Page 1</string>
    <string name="page_2">Page 2</string>
    <string name="dashboard">Dashboard</string>
    <string name="exams">Exams</string>
    <string name="page_5">Page 5</string>

    <!-- Dashboard -->
    <string name="hello_name">Hello %1$s</string>
    <string name="welcome_to_your_dashboard">Welcome to your <b>Dashboard</b></string>
    <string name="total_classes">Total Classes</string>
    <string name="classes_missed">Classes Missed</string>
    <string name="classes_attended">Classes Attended</string>
    <string name="classes_left">Classes Left</string>
    <string name="low_attendance">Your attendance seems to be low in %1$s</string>
    <string name="examination">Examination</string>
    <string name="attendance">Attendance</string>
    <string name="marks">%1$d marks</string>
    <string name="take">Take</string>

    <!-- Create New Exam -->
    <string name="create_new_exam">Create New Exam</string>
    <string name="next">Next</string>
    <string name="classroom_title">Classroom:</string>
    <string name="classroom_title_hint">Select Classroom</string>
    <string name="syllabus_title">Syllabus:</string>
    <string name="syllabus_title_hint">Enter modules here</string>
    <string name="date_title">Date:</string>
    <string name="date_title_hint">DD / MM / YY</string>
    <string name="time_title">Time:</string>
    <string name="time_title_hint">HR : MN : SC</string>
    <string name="duration_title">Duration:</string>
    <string name="duration_title_hint">HR | MN</string>
    <string name="timeframe_title">Timeframe:</string>
    <string name="total_marks_title">Total Marks:</string>
    <string name="category_title">Category:</string>
    <string name="category_title_hint">Internal, mock, etc</string>
    <string name="option_field_hint">Add Option…</string>
    <string name="question_input_hint">Add question here</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="add_instructions">Add Instructions</string>
    <string name="section_name">Section Name</string>
    <string name="section_title">Section title</string>
    <string name="section_description">Section Description (Optional)</string>
    <string name="add_question">Add question</string>
    <string name="add_another_section">Add another section</string>
    <string name="title_activity_main">MainActivity</string>

</resources>