<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dev.logickoder.exams.ui.screens.MainActivity">
    <item
        android:id="@+id/action_page_1"
        android:title="@string/page_1"
        android:icon="@drawable/ic_android" />
    <item
        android:id="@+id/action_page_2"
        android:title="@string/page_2"
        android:icon="@drawable/ic_android" />
    <item
        android:id="@+id/action_dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"/>
    <item
        android:id="@+id/action_exams"
        android:title="@string/exams"
        android:icon="@drawable/ic_exams"/>
    <item
        android:id="@+id/action_page_5"
        android:title="@string/page_5"
        android:icon="@drawable/ic_android"/>
</menu>