<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pcei_text_classroom"
        style="@style/TextStyle.exam_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classroom_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pcei_textinput_classroom"
        style="@style/TextInput.Dropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/pcei_flow"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pcei_text_classroom"
        app:layout_constraintWidth="match_constraint"
        app:layout_constraintWidth_percent=".6">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/classroom_title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pcei_text_syllabus"
        style="@style/TextStyle.exam_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syllabus_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pcei_textinput_syllabus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/pcei_textinput_classroom"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pcei_text_syllabus"
        app:layout_constraintWidth_percent=".6">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/syllabus_title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pcei_text_date"
        style="@style/TextStyle.exam_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pcei_textinput_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="@+id/pcei_textinput_time"
        app:layout_constraintStart_toEndOf="@+id/pcei_text_date"
        app:layout_constraintWidth_percent=".45">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_calendar"
            android:hint="@string/date_title_hint"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pcei_text_time"
        style="@style/TextStyle.exam_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pcei_textinput_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/ic_time"
        app:layout_constraintEnd_toEndOf="@+id/pcei_flow"
        app:layout_constraintStart_toEndOf="@+id/pcei_text_time"
        app:layout_constraintWidth_percent=".45">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_time"
            android:hint="@string/time_title_hint"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pcei_text_duration"
        style="@style/TextStyle.exam_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_title"
        app:layout_constraintStart_toStartOf="@+id/pcei_flow" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pcei_textinput_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/pcei_textinput_time"
        app:layout_constraintStart_toEndOf="@+id/pcei_text_duration"
        app:layout_constraintWidth_percent=".3">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/duration_title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pcei_text_timeframe"
        style="@style/TextStyle.exam_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeframe_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pcei_textinput_timeframe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/pcei_textinput_duration"
        app:layout_constraintStart_toEndOf="@+id/pcei_text_timeframe"
        app:layout_constraintWidth_percent=".3">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/duration_title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pcei_text_totalmarks"
        style="@style/TextStyle.exam_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_marks_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pcei_textinput_totalmarks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/pcei_textinput_timeframe"
        app:layout_constraintStart_toEndOf="@+id/pcei_text_totalmarks"
        app:layout_constraintWidth_percent=".3">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pcei_text_category"
        style="@style/TextStyle.exam_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pcei_textinput_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/pcei_textinput_totalmarks"
        app:layout_constraintStart_toEndOf="@+id/pcei_text_category"
        app:layout_constraintWidth_percent=".45">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/pcei_flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="pcei_text_classroom,pcei_textinput_classroom,pcei_text_syllabus,pcei_textinput_syllabus,pcei_text_date,pcei_textinput_date,pcei_text_time,pcei_textinput_time,pcei_text_duration,pcei_textinput_duration,pcei_text_timeframe,pcei_textinput_timeframe,pcei_text_totalmarks,pcei_textinput_totalmarks,pcei_text_category,pcei_textinput_category"
        app:flow_horizontalGap="24dp"
        app:flow_horizontalStyle="spread_inside"
        app:flow_maxElementsWrap="2"
        app:flow_verticalGap="24dp"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>