<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pceq_text_instructions"
        style="@style/TextStyle.new_exam_section_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_instructions" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pceq_textinput_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/create_new_exam_hint">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pceq_text_section_name"
        style="@style/TextStyle.new_exam_section_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/section_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pceq_textinput_section_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/create_new_exam_hint">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/section_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pceq_textinput_section_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/create_new_exam_hint">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:gravity="top"
            android:hint="@string/section_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pceq_questions_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        tools:itemCount="1"
        tools:listitem="@layout/item_question" />

    <Button
        android:id="@+id/pceq_button_add_question"
        style="@style/TextStyle.exam_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#26733D47"
        android:text="@string/add_question"
        android:textColor="?attr/colorPrimaryVariant" />

    <Button
        android:id="@+id/pceq_button_add_section"
        style="@style/TextStyle.exam_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#26733D47"
        android:text="@string/add_another_section"
        android:textColor="?attr/colorPrimaryVariant" />

</LinearLayout>