<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dashboard_card"
    android:backgroundTint="#F9F9F9"
    android:padding="24dp">

    <EditText
        android:id="@+id/iq_textinput_question"
        style="@style/TextStyle.exam_info_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#D2D2D2"
        android:ems="10"
        android:hint="@string/question_input_hint"
        android:inputType="textPersonName"
        android:textColor="?attr/colorPrimaryVariant"
        android:textColorHint="@color/primary_color_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/iq_list_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iq_textinput_question"
        tools:itemCount="4"
        tools:listitem="@layout/item_question_option" />

    <TextView
        android:id="@+id/iq_text_remove"
        style="@style/TextStyle.question_box_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/delete"
        android:textColor="@color/discard_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iq_list_options" />

    <TextView
        android:id="@+id/iq_text_save"
        style="@style/TextStyle.question_box_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        android:textColor="@color/save_edit"
        app:layout_constraintEnd_toEndOf="@+id/iq_list_options"
        app:layout_constraintTop_toBottomOf="@+id/iq_list_options" />

</androidx.constraintlayout.widget.ConstraintLayout>